Began work on services.html and fixed bug causing mis-aligned text

--- a/css/index.css
+++ b/css/index.css
@@ -244,6 +244,7 @@ p {
   }
 }
 .home .content-box h2 {
+  align-self: flex-start;
   padding-top: 1rem;
   padding-bottom: 2rem;
   padding-left: 1rem;
