--- a/less/home.less
+++ b/less/home.less
@@ -72,6 +72,7 @@ h1 {
       }
     }
     h2 {
+      align-self: flex-start;
       padding-top: 1rem;
       padding-bottom: 2rem;
       padding-left: 1rem;
@@ -153,7 +154,7 @@ h1 {
   }
     .bottom-abs-text {
       position: absolute;
-      
+
       right: 8rem;
       top: 20rem;
       font-size: @heading-font-size;
